# TuranRT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Content/: cube.fbx  firstComputeShader.comp  firstShader.frag  firstShader.vert  gun.glb  teFirstShader.teShader
src/: CMakeLists.txt
src/editor/: editor_includes.cpp  editor_includes.h  main.cpp
src/editor/editor_windows/: editor_windows.cpp  editor_windows.h
src/editor/filesys/: fileformat.fbs  fileformat_bin.h  import_withassimp.cpp  importer.h
src/editor/render_context/: forwardMesh.cpp  forwardMesh.h  forwardRenderer.cpp  rendercontext.cpp  rendercontext.h  rendererAllocator.cpp  rendererAllocator.h  sceneRenderer.cpp  sceneRenderer.h  tesl.cpp  visMesh.cpp  visMesh.h
src/editor/resourceSys/: assimpImporter.cpp  compile_fileformat.bat  fileformat_json.h  gltfImporter.cpp  mesh.cpp  mesh.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  shaderEffect.cpp  shaderEffect.h  surfaceMaterial.cpp  surfaceMaterial.h  surfaceSE.cpp  surfaceSE.h
src/editor/systems/: camera.cpp  camera.h  input.cpp  input.h
src/turanapi/: CMakeLists.txt  profiler_tapi.cpp  profiler_tapi.h  threadingsys_tapi.cpp  threadingsys_tapi.h
src/vulkan_backend/: CMakeLists.txt  contentmanager.cpp  contentmanager.h  imgui_vktgfx.cpp  imgui_vktgfx.h  memory.cpp  memory.h  predefinitions_vk.cpp  predefinitions_vk.h  queue.cpp  renderer.cpp  renderer.h  vk_core.cpp  vk_core.h
